--- a/index.html
+++ b/index.html
@@ -11,20 +11,29 @@
         <h1>Air Quality Index (AQI) Monitor</h1>
     </header>
     <main>
-        <section id="aqi-section">
-            <h2>AQI Parameters</h2>
-            <p id="pm25-value">PM2.5: Loading...</p>
-            <p id="pm10-value">PM10: Loading...</p>
-            <p id="no2-value">NO2: Loading...</p>
-            <p id="co-value">CO: Loading...</p>
-            <p id="o2-value">O2: Loading...</p>
-        </section>
-        <section id="aqi-info-section">
-            <h2>AQI Information</h2>
-            <p id="aqi-value">AQI: Loading...</p>
-            <p id="pollutant-value">Pollutant: Loading...</p>
-            <p id="concentration-value">Concentration: Loading...</p>
-            <p id="category-value">Category: Loading...</p>
+        <section id="api-data-section">
+            <h2>API Data</h2>
+            <ul>
+                <li><strong>CO:</strong> <span id="co-value">Loading...</span></li>
+                <li><strong>NO2:</strong> <span id="no2-value">Loading...</span></li>
+                <li><strong>OZONE:</strong> <span id="ozone-value">Loading...</span></li>
+                <li><strong>PM10:</strong> <span id="pm10-value">Loading...</span></li>
+                <li><strong>PM2.5:</strong> <span id="pm25-value">Loading...</span></li>
+                <li><strong>SO2:</strong> <span id="so2-value">Loading...</span></li>
+                <li><strong>City:</strong> <span id="city-value">Loading...</span></li>
+                <li><strong>Country Code:</strong> <span id="country-code-value">Loading...</span></li>
+                <li><strong>Division:</strong> <span id="division-value">Loading...</span></li>
+                <li><strong>Latitude:</strong> <span id="lat-value">Loading...</span></li>
+                <li><strong>Longitude:</strong> <span id="lng-value">Loading...</span></li>
+                <li><strong>Place Name:</strong> <span id="place-name-value">Loading...</span></li>
+                <li><strong>Postal Code:</strong> <span id="postal-code-value">Loading...</span></li>
+                <li><strong>State:</strong> <span id="state-value">Loading...</span></li>
+                <li><strong>Updated At:</strong> <span id="updated-at-value">Loading...</span></li>
+                <li><strong>AQI:</strong> <span id="aqi-value">Loading...</span></li>
+                <li><strong>Pollutant:</strong> <span id="pollutant-value">Loading...</span></li>
+                <li><strong>Concentration:</strong> <span id="concentration-value">Loading...</span></li>
+                <li><strong>Category:</strong> <span id="category-value">Loading...</span></li>
+            </ul>
         </section>
     </main>
     <script src="script.js"></script>
