--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
         /* Styling for the background image */
         body {
-            background-image: url('https://example.com/your-background-image.jpg'); /* Replace with your image URL */
+            background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.freecreatives.com%2Fbackgrounds%2Fwebsite-background.html&psig=AOvVaw2appETBOzxwoayUPjdb0gl&ust=1695375153257000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCKCB_d6yu4EDFQAAAAAdAAAAABAJ'); /* Replace with your image URL */
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
@@ -68,24 +68,31 @@
         <div class="table-container" id="table-container">
             <!-- The table will be rendered here -->
         </div>
+        <div style="text-align: center;">
+            <label for="postal-code">Enter Postal Code:</label>
+            <input type="text" id="postal-code" name="postal-code" placeholder="Enter Postal Code">
+            <button onclick="fetchData()">Fetch Data</button>
+        </div>
     </main>
     <script>
-        const apiUrl = 'https://api.ambeedata.com/latest/by-lat-lng?lat=12&lng=77';
-        const apiKey = '2c30af85321ece6e47fc671496cd06829795f8cba7ca2886a530ac38bbc75d2a';
+        // Function to fetch data and populate the table based on the entered postal code
+        function fetchData() {
+            const postalCode = document.getElementById('postal-code').value;
+            const apiUrl = `https://api.ambeedata.com/latest/by-postal-code?postalCode=${postalCode}&countryCode=IN`;
+            const apiKey = '2c30af85321ece6e47fc671496cd06829795f8cba7ca2886a530ac38bbc75d2a';
 
-        // Set up headers with your API key
-        const headers = new Headers({
-            'x-api-key': apiKey,
-        });
+            // Set up headers with your API key
+            const headers = new Headers({
+                'x-api-key': apiKey,
+                'Content-type': 'application/json',
+            });
 
-        // Set up the request configuration
-        const requestOptions = {
-            method: 'GET',
-            headers: headers,
-        };
+            // Set up the request configuration
+            const requestOptions = {
+                method: 'GET',
+                headers: headers,
+            };
 
-        // Function to fetch data and populate the table
-        function fetchDataAndDisplay() {
             // Make the API request
             fetch(apiUrl, requestOptions)
                 .then(response => {
@@ -97,6 +104,7 @@
                 .then(data => {
                     // Get a reference to the table container
                     const tableContainer = document.getElementById('table-container');
+                    tableContainer.innerHTML = ''; // Clear previous data
 
                     // Create the table element
                     const table = document.createElement('table');
@@ -154,8 +162,8 @@
                 });
         }
 
-        // Call the function to fetch data and populate the table
-        fetchDataAndDisplay();
+        // Initially, you can populate the table with data for a default postal code (or remove this line)
+        fetchData();
     </script>
 </body>
 </html>
