--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
         /* Styling for the background image */
         body {
-            background-image: url('https://images.rawpixel.com/image_800/czNmcy1wcml2YXRlL3Jhd3BpeGVsX2ltYWdlcy93ZWJzaXRlX2NvbnRlbnQvbHIvdjEwMTYtYy0wOS1rc2g2bjE3by5qcGc.jpg'); /* Replace with your image URL */
+            background-image: url('https://example.com/your-background-image.jpg'); /* Replace with your image URL */
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
@@ -32,20 +32,25 @@
         <h1 style="color: #fff; text-align: center;">Air Quality Index (AQI) Monitor</h1>
     </header>
     <main>
-        <div class="table-container" id="table-container">
-            <!-- The table will be rendered here -->
-        </div>
         <div style="text-align: center;">
             <label for="postal-code">Enter Postal Code:</label>
             <input type="text" id="postal-code" name="postal-code" placeholder="Enter Postal Code">
+            <label for="country-code">Enter Country Code (e.g., IN for India):</label>
+            <input type="text" id="country-code" name="country-code" placeholder="Enter Country Code">
             <button onclick="fetchData()">Fetch Data</button>
+        </div>
+        <div class="table-container" id="table-container">
+            <!-- The table will be rendered here -->
         </div>
     </main>
     <script>
-        // Function to fetch data and populate the table based on the entered postal code
+        // Function to fetch data and populate the table based on the entered postal code and country code
         function fetchData() {
             const postalCode = document.getElementById('postal-code').value;
-            const apiUrl = `https://api.ambeedata.com/latest/by-postal-code?postalCode=${postalCode}&countryCode=IN`;
+            const countryCode = document.getElementById('country-code').value;
+            const apiUrl = `https://api.ambeedata.com/latest/by-postal-code?postalCode=${postalCode}&countryCode=${countryCode}`;
+
+            // Replace 'API_KEY' with your actual API key
             const apiKey = '2c30af85321ece6e47fc671496cd06829795f8cba7ca2886a530ac38bbc75d2a';
 
             // Set up headers with your API key
@@ -127,7 +132,7 @@
                 });
         }
 
-        // Initially, you can populate the table with data for a default postal code (or remove this line)
+        // Initially, you can populate the table with data for a default postal code and country code (or remove this line)
         fetchData();
     </script>
 </body>
