--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
         /* Styling for the background image */
         body {
-            background-image: url('https://example.com/your-background-image.jpg'); /* Replace with your image URL */
+            background-image: url('https://images.rawpixel.com/image_800/czNmcy1wcml2YXRlL3Jhd3BpeGVsX2ltYWdlcy93ZWJzaXRlX2NvbnRlbnQvbHIvdjEwMTYtYy0wOS1rc2g2bjE3by5qcGc.jpg'); /* Replace with your image URL */
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
