--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         /* Styling for the background image */
         body {
-            background-image: url('https://cdn.pixabay.com/photo/2017/08/30/01/05/milky-way-2695569_1280.jpg'); /* Replace with your image URL */
+            background-image: url('https://example.com/your-background-image.jpg'); /* Replace with your image URL */
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
@@ -48,8 +48,9 @@
             border-radius: 5px;
         }
 
-        /* Styling for the table */
+        /* Styling for the table container (hidden by default) */
         .table-container {
+            display: none; /* Hidden by default */
             background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white background */
             border-radius: 10px;
             padding: 20px;
@@ -76,10 +77,14 @@
             background-color: #f2f2f2;
         }
 
-        /* Styling for the line graph */
+        /* Styling for the chart container */
         .chart-container {
-            max-width: 500px;
-            margin: 0 auto;
+            display: none; /* Hidden by default */
+            background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white background */
+            border-radius: 10px;
+            padding: 20px;
+            max-width: 500px; /* Adjust the width as needed */
+            margin: 0 auto; /* Center the chart horizontally */
         }
     </style>
     <title>AQI and WQI Monitor</title>
@@ -139,6 +144,8 @@
                     // Get a reference to the table container and chart container
                     const tableContainer = document.getElementById('table-container');
                     const chartContainer = document.getElementById('chart-container');
+                    tableContainer.style.display = 'none'; // Hide table by default
+                    chartContainer.style.display = 'none'; // Hide chart by default
                     tableContainer.innerHTML = ''; // Clear previous data
                     chartContainer.innerHTML = ''; // Clear previous chart
 
@@ -188,10 +195,11 @@
 
                     table.appendChild(tbody);
 
-                    // Append the table to the container
+                    // Append the table to the container and display it
                     tableContainer.appendChild(table);
+                    tableContainer.style.display = 'block';
 
-                    // Create a chart with data
+                    // Create a chart with data and display it
                     createChart(data.stations[0]);
                 })
                 .catch(error => {
@@ -250,6 +258,9 @@
                 data: chartData,
                 options: chartOptions
             });
+
+            // Display the chart container
+            chartContainer.style.display = 'block';
         }
     </script>
 </body>
