--- a/index.html
+++ b/index.html
@@ -62,18 +62,16 @@
         table {
             width: 100%;
             border-collapse: collapse;
+            border: 2px solid #333; /* Thicker border */
         }
 
-        table, th, td {
-            border: 1px solid #ddd;
-        }
-
-        th, td {
+        table th, table td {
+            border: 2px solid #333; /* Thicker border */
             padding: 10px;
             text-align: left;
         }
 
-        th {
+        table th {
             background-color: #f2f2f2;
         }
 
